# racecar2

./: .gitignore  README.md
opencr_ws/racecar/: ESC.h  Encoder.h  PID.cpp  PID.h  Pitches.h  ROS.h  Utils.h  racecar.ino
ros2_ws/maps/: addis.yaml  addis_min_time3.csv  centerline.py  get_centerline.ipynb  ki_2f.pgm  ki_2f.yaml  ki_2f_centerline.csv  ki_2f_centerline.pgm  ki_2f_mask.pgm  ki_3f2.pgm  ki_3f_r.pgm  ki_3f_r.yaml  ki_3f_r_centerline.csv  ki_3f_r_centerline_centerline.pgm  ki_3f_r_centerline_mask.pgm  ki_3f_r_centerline_short.csv  ki_3f_r_mask.pgm  track.pgm  track.yaml  track_centerline.csv  track_centerline.csv_bak  track_centerline.pgm  track_centerline.pgm_bak  track_large.pgm  track_large.yaml  track_large_centerline.pgm  track_large_mask.pgm  track_mask.pgm  track_mask.pgm_bak  track_optim.csv  track_optim_nav2.csv
ros2_ws/robot/: Dockerfile  Makefile  build-image.sh  check_joystick.sh  cyclonedds.xml  deploy-image.sh  docker-compose.yml  entrypoint.sh  requirements.txt
ros2_ws/simulator/: Dockerfile  Makefile  build-image.sh  cyclonedds.xml  deploy-image.sh  docker-compose.yml  entrypoint.sh  requirements.txt  test.sdf
ros2_ws/src/common/ackermann_mux/include/ackermann_mux/: ackermann_mux.hpp
ros2_ws/src/common/ackermann_mux/src/: ackermann_mux.cpp
ros2_ws/src/common/interactive_marker_ackermann_server/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/common/interactive_marker_ackermann_server/src/: marker_server.cpp
ros2_ws/src/common/racecar_control/: CMakeLists.txt  package.xml
ros2_ws/src/common/racecar_control/config/: ackermann_mux.yaml  controller.yaml  robot_localization.yaml  teleop_ps4.yaml  teleop_ps4_usb.yaml
ros2_ws/src/common/racecar_control/include/racecar_control/: racecar_odometry.hpp  rolling_mean_accumulator.hpp
ros2_ws/src/common/racecar_control/launch/: control.launch  teleop.launch
ros2_ws/src/common/racecar_control/src/: cmd_vel_converter.cpp  racecar_controller_node.cpp  racecar_odometry.cpp
ros2_ws/src/common/racecar_description/: CMakeLists.txt  package.xml
ros2_ws/src/common/racecar_description/launch/: description.launch
ros2_ws/src/common/racecar_description/urdf/: accessories.urdf.xacro  racecar.urdf.xacro
ros2_ws/src/common/racecar_description/urdf/accessories/: hokuyo_ust10.urdf.xacro
ros2_ws/src/common/racecar_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/common/racecar_navigation/config/: nav2_params.yaml
ros2_ws/src/common/racecar_navigation/launch/: navigation.launch  slam.launch
ros2_ws/src/common/racecar_navigation/maps/: ki_3f.yaml
ros2_ws/src/common/teleop_ackermann_joy/: CMakeLists.txt
ros2_ws/src/common_gpu/particle_filter/config/: localize.yaml
ros2_ws/src/common_gpu/particle_filter/launch/: particle_filter.launch
ros2_ws/src/common_gpu/particle_filter/particle_filter/: particle_filter.py
ros2_ws/src/navigation/fsmt_controller/: CMakeLists.txt  fsmt_controller.xml  package.xml
ros2_ws/src/navigation/fsmt_controller/include/fsmt_controller/: fsmt.h  fsmt_controller.hpp
ros2_ws/src/navigation/fsmt_controller/src/: fsmt.cpp  fsmt_controller.cpp
ros2_ws/src/navigation/nav2_pure_pursuit_controller/include/nav2_pure_pursuit_controller/: pure_pursuit_controller.hpp
ros2_ws/src/navigation/nav2_pure_pursuit_controller/src/: pure_pursuit_controller.cpp
ros2_ws/src/navigation/racecar_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/navigation/racecar_bringup/launch/: bringup_launch.py  keepout_launch.py  localization_launch.py  navigation.launch  navigation_launch.py  slam.launch  slam_launch.py
ros2_ws/src/navigation/racecar_bringup/params/: nav2_params.yaml  nav2_params_bak.yaml
ros2_ws/src/navigation/racecar_bringup/src/: twist_to_ackermann_node.cpp
ros2_ws/src/navigation/racecar_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/navigation/racecar_navigation/launch/: debug.launch
ros2_ws/src/navigation/racecar_navigation/scripts/: NMPC.py  NMPC_node.py  cubic_spline_planner.py  debug_node.py
ros2_ws/src/navigation/racecar_navigation/src/: racecar_motion_tube.cpp
ros2_ws/src/navigation/racecar_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
ros2_ws/src/navigation/racecar_planner/include/racecar_planner/: straight_line_planner.hpp  track_planner.hpp
ros2_ws/src/navigation/racecar_planner/src/: straight_line_planner.cpp  track_planner.cpp
ros2_ws/src/robot/racecar_base/: CMakeLists.txt  package.xml
ros2_ws/src/robot/racecar_base/config/: urg_node2.yaml  vesc_config.yaml
ros2_ws/src/robot/racecar_base/launch/: bringup.launch  slam.launch
ros2_ws/src/robot/racecar_base/launch/include/: lidar.launch
ros2_ws/src/robot/racecar_base/scripts/: startup.py
ros2_ws/src/robot/safety/: CMakeLists.txt  package.xml
ros2_ws/src/robot/safety/src/: safety_node.cpp
ros2_ws/src/simulator/f1tenth_gym_ros/: setup.py
ros2_ws/src/simulator/f1tenth_gym_ros/config/: sim.yaml
ros2_ws/src/simulator/f1tenth_gym_ros/f1tenth_gym_ros/: description_subscriber.py  gym_bridge.py
ros2_ws/src/simulator/f1tenth_gym_ros/launch/: description.launch  gym_bridge.rviz  gym_bridge_launch.py  simulator.launch
ros2_ws/src/simulator/f1tenth_gym_ros/maps/: ki_3f2.yaml
ros2_ws/src/simulator/racecar_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/simulator/racecar_gazebo/include/racecar_gazebo/: RacecarController.hh
ros2_ws/src/simulator/racecar_gazebo/include/steering_odometry/: rolling_mean_accumulator.hpp  steering_odometry.hpp
ros2_ws/src/simulator/racecar_gazebo/launch/: empty_world.launch  spawn_racecar.launch
ros2_ws/src/simulator/racecar_gazebo/src/: RacecarController.cc  steering_odometry.cpp
ros2_ws/src/simulator/racecar_helper/: CMakeLists.txt  package.xml
ros2_ws/src/simulator/racecar_helper/config/: lifecycle_manager.yaml  particle_filter.yaml
ros2_ws/src/simulator/racecar_helper/launch/: empty.launch  map.launch
ros2_ws/src/simulator/racecar_helper/rviz/: racecar.rviz
ros2_ws/src/simulator/racecar_helper/scripts/: map2stl.py
ros2_ws/src/simulator/racecar_helper/worlds/: map.sdf
(+3 files in other folders)
